--- a/recipe-sharing-app/package.json
+++ b/recipe-sharing-app/package.json
@@ -1,18 +1,20 @@
 {
   "name": "recipe-sharing-app",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zustand": "^4.4.0"
+    "react-router-dom": "^6.11.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.3.9"
+    "vite": "^4.3.0"
   }
 }
