--- a/form-handling-react/package.json
+++ b/form-handling-react/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "formik": "^2.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -20,3 +21,4 @@
     "vite": "^5.2.0"
   }
 }
+
